--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bufferutil": "^3.0.2",
     "discord.js": "^11.2.1",
+    "erlpack": "github:hammerandchisel/erlpack",
+    "sodium": "^2.0.1",
     "uws": "^8.14.1"
   },
   "devDependencies": {},
