--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bufferutil": "^3.0.2",
     "discord.js": "^11.2.1",
+    "diskdb": "^0.1.17",
     "erlpack": "github:hammerandchisel/erlpack",
     "sodium": "^2.0.1",
     "uws": "^8.14.1"
